--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Opdract1</title>
+    <title>Opdracht1</title>
 </head>
-<body>
-<p>Hello World!</p>
+<body bgcolor="#ff69b4" >
+<h1 align="center"><strong><i>Hello World!</i></strong></h1>
+<p><strong>U NEE!!!</strong></p>
 </body>
 </html>
